--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,12 @@
 <section>
-  <header>
-    <app-header></app-header>
-  </header>
-  <app-side-menu>
-    <router-outlet></router-outlet>
-  </app-side-menu>
-  <app-middle-desk></app-middle-desk>
-  <footer>
+    <header>
+        <app-header></app-header>
+    </header>
+    <app-side-menu>
+        <router-outlet></router-outlet>
+    </app-side-menu>
+    <app-middle-desk></app-middle-desk>
+    <!-- <footer>
     <app-footer></app-footer>
-  </footer>
+  </footer> -->
 </section>
-
-
-
